# simpleton

./: Cargo.toml  README.md
.github/workflows/: docTest.yml  rust tests copy.yml  rust tests.yml  simpletonBuild.yml  simpletonExamples.yml
examples/: page_example.rs  simple_example.rs
src/: lib.rs
src/display/: mod.rs  page.rs  textformat.rs
