[package]
name = "simpleton"
version = "0.1.0"
authors = ["Mikael Edlund <d34dmeat@gmail.com>"]
edition = "2021"
description = "simpleton is a simple, no bells and whistles tui library"
repository = "https://github.com/d34dmeat/simpleton"
readme = "README.md"
keywords = ["tui", "console"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[badges]
github = { repository = "d34dmeat/workflows/simpleton"}